# nextval_with_xact_lock

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  nextval_with_xact_lock.control
.cargo/: config.toml
src/: lib.rs
tests/: common_sequence_tests.rs  custom_sequence_start_value_tests.rs  custom_sequence_step_tests.rs  cycle_sequence_tests.rs  lock_tests.rs  no_cycle_sequence_tests.rs  sequence_cache_tests.rs  sequence_privileges_tests.rs
tests/pg_regress/expected/: setup.out
tests/support/: mod.rs
