[package]
name = "nextval_with_xact_lock"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_nextval_with_xact_lock"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []
lock_tests = []

[dependencies]
pgrx = "=0.16.1"

[dev-dependencies]
pgrx-tests = "=0.16.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7" , features = ["runtime", "with-chrono-0_4"] }
once_cell = "1"
chrono = "0.4.42"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
